@@ -4383,6 +4383,8 @@ camera_get_config (Camera *camera, CameraWidget **window, GPContext *context)
 					memset(&dpd,0,sizeof(dpd));
 					ptp_getdevicepropdesc(params,cursub->propid,&dpd);
 					ret = cursub->getfunc (camera, &widget, cursub, &dpd);
+					if (dpd.GetSet == PTP_DPGS_Get)
+						gp_widget_set_readonly (widget, 1);
 					ptp_free_devicepropdesc(&dpd);
 					if (nrofsetprops)
 						setprops = realloc(setprops,sizeof(setprops[0])*(nrofsetprops+1));
@@ -4564,7 +4566,10 @@ camera_get_config (Camera *camera, CameraWidget **window, GPContext *context)
 		default:
 			break;
 		}
+		if (dpd.GetSet == PTP_DPGS_Get)
+			gp_widget_set_readonly (widget, 1);
 		gp_widget_append (section, widget);
+		ptp_free_devicepropdesc(&dpd);
 	}
 	return GP_OK;
 }
